[project]
name = "valen-slos-py"
version = "0.1"
description = "Project for teaching the concepts of software testing, in Python."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Valen Jet"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/valenjet/valen-slos-py"
Changelog = "https://github.com/valenjet/valen-slos-py/releases"
Issues = "https://github.com/valenjet/valen-slos-py/issues"
CI = "https://github.com/valenjet/valen-slos-py/actions"


[project.optional-dependencies]
test = ["pytest"]
