[project]
name = "slos"
version = "0.0.1"
description = "Teaching project Student Loan Origination System written in Python."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Stephen D Ritchie"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/valenjet/valen-slos-py"
Changelog = "https://github.com/valenjet/valen-slos-py/releases"
Issues = "https://github.com/valenjet/valen-slos-py/issues"
CI = "https://github.com/valenjet/valen-slos-py/actions"


[project.optional-dependencies]
test = ["pytest"]
